# api-extratos-contabil-python

./: .env.example  .gitignore  GMAIL_DASHBOARD_IMPROVEMENTS.md  README.md  REVERSAO_20260118_153912.xlsx  features.md  iniciar_servidor.bat  plano-melhoria-classificacao-tipo-extrato.md  pyproject.toml  requirements.txt  test_processar_extratos.py  test_watcher.py  verificar_permissoes.bat  verificar_permissoes.py  verificar_porta.bat
app/: __init__.py  config.py  database.py  events.py  main.py
app/graphs/: processing_graph.py
app/models/: __init__.py  extrato_log.py  extrato_log_teste.py  extratos_baixados_log.py  extratos_baixados_log_teste.py  extratos_baixados_reversao_log.py  reversao_log.py
app/routes/: __init__.py  extratos_test.py  gmail.py
app/schemas/: __init__.py  api.py  client.py  llm_response.py
app/services/: __init__.py  audit_service.py  client_service.py  db_extratos_baixados_log_service.py  db_extratos_baixados_log_teste_service.py  db_log_service.py  db_log_teste_service.py  excel_extractor_service.py  extratos_baixados_reversao_service.py  (+10 more)
scripts/: _apply_migration.py  add_manually_moved.sql  check_log.py  check_logs.py  check_paths.py  clear_cache.py  configurar_servico.ps1  create_all_tables.sql  create_extratos_log.sql  create_extratos_log_teste.sql  generate_deletion_report.py  gerar_relatorio_reversao.py  get_unc.py  migrate_db.py  migrate_reversoes_log.py  revert_process.py  reverter_processamentos.py  test_client_path.py  test_endpoint.py  test_previous_month.py
tests/: __init__.py  test_api.py  test_matching_service.py
(+19 files in other folders)
