[project]
name = "extratos-contabil"
version = "1.0.0"
description = "Sistema de automação para processamento de extratos contábeis"
requires-python = ">=3.11"
dependencies = [
    # FastAPI e servidor
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    
    # Configuração
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    
    # Banco de Dados
    "sqlalchemy>=2.0.0",
    
    # PDF
    "pypdf>=4.0.0",
    "pdfplumber>=0.10.0",
    
    # LLM
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-core>=0.1.0",
    "openai>=1.0.0",
    
    # Excel
    "openpyxl>=3.1.0",
    "pandas>=2.1.0",
    
    # Matching
    "rapidfuzz>=3.6.0",
    
    # Logging estruturado
    "structlog>=24.1.0",
    
    # Utilitários
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
